--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@angular/platform-browser-dynamic": "^14.1.3",
     "@angular/router": "^14.1.3",
     "@fullcalendar/core": "4.4.0",
+    "@popperjs/core": "^2.11.6",
     "@types/jasmine": "^4.3.0",
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "^18.7.13",
+    "bootstrap": "^5.2.3",
     "chart.js": "^3.9.1",
     "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
